force-app/main/default/objects/Question_To_Case_Item__c/Question_To_Case_Item__c.object-meta.xml
<CustomObject>
    <description>This holds all questions that are raised awaiting to turn into cases.</description>
    <label>Question To Case Item</label>
    <nameField>
        <label>Question To Case Holders Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question To Case Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>