force-app/main/default/objects/Question_To_Case_Item__c/fields/Case_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Date__c</fullName>
    <description>Date used to create a case</description>
    <label>Case Date</label>
    <type>Date</type>
</CustomField>