force-app/main/default/objects/Question_To_Case_Item__c/fields/FeedItemID__c.field-meta.xml
<CustomField>
    <fullName>FeedItemID__c</fullName>
    <description>Feed Item in question</description>
    <label>FeedItemID</label>
    <length>22</length>
    <type>Text</type>
</CustomField>