force-app/main/default/objects/Question_To_Case_Item__c/fields/Product_Routing__c.field-meta.xml
<CustomField>
    <fullName>Product_Routing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked Product Routing</description>
    <label>Product Routing</label>
    <referenceTo>ProductRouting__c</referenceTo>
    <relationshipLabel>Question To Case Items</relationshipLabel>
    <relationshipName>Question_To_Case_Items</relationshipName>
    <type>Lookup</type>
</CustomField>