force-app/main/default/objects/Question_To_Case_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FeedItemID__c</columns>
    <columns>NAME</columns>
    <columns>Product_Routing__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>